Fixes for findbugs normal prio errors
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@7658 bf0df8d0-2c1f-0410-b170-bd30377b63dc